# poly-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  com.polybot.plist  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  render.yaml
config/: default.yaml
poly_bot/: __init__.py  bot.py  main.py
poly_bot/config/: settings.py
poly_bot/execution/: executor.py  live_executor.py  models.py  paper_executor.py
poly_bot/market_data/: clob_client.py  feed.py  gamma_client.py  models.py  order_book.py
poly_bot/observability/: logging.py
poly_bot/portfolio/: models.py  pnl.py  position_tracker.py
poly_bot/risk/: manager.py
poly_bot/store/: database.py  trade_store.py
poly_bot/strategies/: ai_research.py  base.py  mean_reversion.py  momentum.py  registry.py
poly_bot/web/: api.py
poly_bot/web/templates/: dashboard.html
tests/: conftest.py
tests/unit/: test_order_book.py  test_paper_executor.py  test_risk_manager.py
